TWC3167-4732 : Overlapping maximize height fix (#1757)

--- a/Intel.MyDeals/Client/src/app/contract/ptModals/overLappingCheckDeals/overlappingCheckDeals.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/ptModals/overLappingCheckDeals/overlappingCheckDeals.component.css
@@ -386,3 +386,6 @@ a {
     vertical-align: middle;
     padding: 0;
 }
+.k-window-maximized kendo-grid.overDealChecking.widthOutDesign.k-widget {
+    height: 857px !important;
+}
